--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ Flask-SQLAlchemy==3.0.5
 pyserial==3.5
 python-dateutil==2.8.2
 ntplib==0.4.0
+numpy==1.24.3
+opencv-python==4.8.1.78
+Pillow==10.0.0
